--- a/1_simple_graph.ipynb
+++ b/1_simple_graph.ipynb
@@ -1,21 +1,33 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Simple Currency‑Conversion Graph\n",
+    "This notebook demonstrates how to build a basic LangGraph `StateGraph` that:\n",
+    "1. Accepts an input amount in USD.\n",
+    "2. Applies a fixed markup to compute a USD total.\n",
+    "3. Converts the USD total into INR."
+   ],
+   "id": "b909f104155be644"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:25:21.101601Z",
-     "start_time": "2025-07-07T19:25:21.095149Z"
+     "end_time": "2025-07-22T14:32:59.669793Z",
+     "start_time": "2025-07-22T14:32:58.643213Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from typing import TypedDict\n",
-    "\n",
+    "from langgraph.graph import StateGraph, START, END\n",
     "\n",
     "class PortfolioState(TypedDict):\n",
-    "    amount_usd: float\n",
-    "    total_usd: float\n",
-    "    total_inr: float"
+    "    amount_usd: float      # input amount in USD\n",
+    "    total_usd: float       # intermediate USD total after markup\n",
+    "    total_inr: float       # final INR total after conversion"
    ],
    "id": "903d54e93008f695",
    "outputs": [],
@@ -27,57 +39,73 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:37:03.078040Z",
-     "start_time": "2025-07-07T19:37:03.074049Z"
+     "end_time": "2025-07-22T14:33:00.063649Z",
+     "start_time": "2025-07-22T14:33:00.058134Z"
     }
    },
    "source": [
     "def calc_total(state: PortfolioState) -> PortfolioState:\n",
+    "    \"\"\"Compute the USD total by applying a fixed 8% markup.\"\"\"\n",
     "    state['total_usd'] = state['amount_usd'] * 1.08\n",
     "    return state\n",
     "\n",
     "def convert_to_inr(state: PortfolioState) -> PortfolioState:\n",
+    "    \"\"\"Convert the USD total in state to INR using a fixed 85 INR/USD rate.\"\"\"\n",
     "    state['total_inr'] = state['total_usd'] * 85\n",
     "    return state"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Build the StateGraph\n",
+    "- `calc_total_node` runs `calc_total`\n",
+    "- `convert_to_inr_node` runs `convert_to_inr`\n",
+    "- Edges: START → calc_total_node → convert_to_inr_node → END\n"
+   ],
+   "id": "d51ebfc8d3584bd8"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:37:03.958394Z",
-     "start_time": "2025-07-07T19:37:03.954391Z"
+     "end_time": "2025-07-22T14:33:00.082454Z",
+     "start_time": "2025-07-22T14:33:00.075383Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from langgraph.graph import StateGraph, START, END\n",
-    "\n",
     "builder = StateGraph(PortfolioState)\n",
     "\n",
+    "# Add two computation nodes\n",
     "builder.add_node(\"calc_total_node\", calc_total)\n",
     "builder.add_node(\"convert_to_inr_node\", convert_to_inr)\n",
     "\n",
+    "# Wire up execution order\n",
     "builder.add_edge(START, \"calc_total_node\")\n",
     "builder.add_edge(\"calc_total_node\", \"convert_to_inr_node\")\n",
     "builder.add_edge(\"convert_to_inr_node\", END)\n",
     "\n",
+    "\n",
+    "# Compile into an executable graph\n",
     "graph = builder.compile()"
    ],
    "id": "104a5fb723ca1797",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:37:04.606284Z",
-     "start_time": "2025-07-07T19:37:04.481001Z"
+     "end_time": "2025-07-22T14:33:00.342434Z",
+     "start_time": "2025-07-22T14:33:00.094113Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# Display the graph structure as a Mermaid diagram PNG\n",
     "from IPython.display import Image, display\n",
     "\n",
     "display(Image(graph.get_graph().draw_mermaid_png()))"
@@ -95,13 +123,22 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Test Invocation\n",
+    "Run the graph on a sample input to verify USD→INR conversion.\n"
+   ],
+   "id": "edbce71dd59ad48d"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:37:06.617844Z",
-     "start_time": "2025-07-07T19:37:06.611839Z"
+     "end_time": "2025-07-22T14:33:00.376Z",
+     "start_time": "2025-07-22T14:33:00.357339Z"
     }
    },
    "cell_type": "code",
@@ -114,20 +151,12 @@
        "{'amount_usd': 1000, 'total_usd': 1080.0, 'total_inr': 91800.0}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "7b641f6b0a83ea1c"
+   "execution_count": 5
   }
  ],
  "metadata": {
