--- a/2_graph_with_condition.ipynb
+++ b/2_graph_with_condition.ipynb
@@ -1,73 +1,133 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Conditional Currency‑Conversion Graph\n",
+    "This notebook extends the simple currency‑conversion graph by adding dynamic routing:\n",
+    "1. Takes an input USD amount.\n",
+    "2. Applies a fixed markup to compute a USD total.\n",
+    "3. Routes to either INR or EUR conversion based on a `target_currency` field.\n",
+    "4. Outputs the final converted amount."
+   ],
+   "id": "25f501c08098dc12"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:45:51.037262Z",
-     "start_time": "2025-07-07T19:45:51.032678Z"
+     "end_time": "2025-07-22T15:13:30.593756Z",
+     "start_time": "2025-07-22T15:13:29.585512Z"
     }
    },
    "source": [
     "from typing import TypedDict, Literal\n",
+    "from langgraph.graph import StateGraph, START, END\n",
     "\n",
     "class PortfolioState(TypedDict):\n",
+    "    \"\"\"\n",
+    "    State schema for conditional currency conversion:\n",
+    "    - amount_usd: input amount in USD\n",
+    "    - total_usd: intermediate USD total after markup\n",
+    "    - target_currency: which currency to convert to (“INR” or “EUR”)\n",
+    "    - total: final converted amount in target currency\n",
+    "    \"\"\"\n",
     "    amount_usd: float\n",
     "    total_usd: float\n",
     "    target_currency: Literal[\"INR\", \"EUR\"]\n",
     "    total: float"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:45:51.787506Z",
-     "start_time": "2025-07-07T19:45:51.783506Z"
+     "end_time": "2025-07-22T15:13:30.986621Z",
+     "start_time": "2025-07-22T15:13:30.980806Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def calc_total(state: PortfolioState) -> PortfolioState:\n",
+    "    \"\"\"\n",
+    "    Apply an 8% markup to the input USD amount.\n",
+    "    Args:\n",
+    "      state[\"amount_usd\"]: raw USD input\n",
+    "    Returns:\n",
+    "      state with updated state[\"total_usd\"]\n",
+    "    \"\"\"\n",
     "    state['total_usd'] = state['amount_usd'] * 1.08\n",
     "    return state\n",
     "\n",
     "def convert_to_inr(state: PortfolioState) -> PortfolioState:\n",
+    "    \"\"\"\n",
+    "    Convert the USD total to INR using a fixed rate of 85 INR/USD.\n",
+    "    Args:\n",
+    "      state[\"total_usd\"]: markup USD total\n",
+    "    Returns:\n",
+    "      state with updated state[\"total\"]\n",
+    "    \"\"\"\n",
     "    state['total'] = state['total_usd'] * 85\n",
     "    return state\n",
     "\n",
     "def convert_to_eur(state: PortfolioState) -> PortfolioState:\n",
+    "    \"\"\"\n",
+    "    Convert the USD total to EUR using a fixed rate of 0.90 EUR/USD.\n",
+    "    Args:\n",
+    "      state[\"total_usd\"]: markup USD total\n",
+    "    Returns:\n",
+    "      state with updated state[\"total\"]\n",
+    "    \"\"\"\n",
     "    state['total'] = state['total_usd'] * 0.9\n",
     "    return state\n",
     "\n",
     "def choose_conversion(state: PortfolioState) -> str:\n",
+    "    \"\"\"\n",
+    "    Decide which conversion node to run next based on\n",
+    "    state[\"target_currency\"].\n",
+    "    Returns either \"INR\" or \"EUR\" to map to the node names.\n",
+    "    \"\"\"\n",
     "    return state['target_currency']"
    ],
    "id": "4f6f0112c2ca3da9",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Build the Conditional StateGraph\n",
+    "- `calc_total_node` runs `calc_total`\n",
+    "- After markup, branch to `convert_to_inr_node` or `convert_to_eur_node` based on `choose_conversion`\n",
+    "- Both conversion nodes flow into END"
+   ],
+   "id": "238a53f4109300f3"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:47:11.756014Z",
-     "start_time": "2025-07-07T19:47:10.587523Z"
+     "end_time": "2025-07-22T15:13:31.004694Z",
+     "start_time": "2025-07-22T15:13:30.996769Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from langgraph.graph import StateGraph, START, END\n",
-    "\n",
     "builder = StateGraph(PortfolioState)\n",
     "\n",
+    "# Add nodes for each function\n",
     "builder.add_node(\"calc_total_node\", calc_total)\n",
     "builder.add_node(\"convert_to_inr_node\", convert_to_inr)\n",
     "builder.add_node(\"convert_to_eur_node\", convert_to_eur)\n",
     "\n",
+    "# Wire START to the markup node\n",
     "builder.add_edge(START, \"calc_total_node\")\n",
+    "\n",
+    "# Conditional routing: after markup, pick conversion based on state\n",
     "builder.add_conditional_edges(\n",
     "    \"calc_total_node\",\n",
     "    choose_conversion,\n",
@@ -76,19 +136,22 @@
     "        \"EUR\": \"convert_to_eur_node\"\n",
     "    }\n",
     ")\n",
+    "\n",
+    "# Merge both conversion paths into END\n",
     "builder.add_edge([\"convert_to_inr_node\", \"convert_to_eur_node\"], END)\n",
     "\n",
+    "# Compile into an executable graph\n",
     "graph = builder.compile()"
    ],
    "id": "b29ae511563bd7ea",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:47:29.378176Z",
-     "start_time": "2025-07-07T19:47:29.246667Z"
+     "end_time": "2025-07-22T15:13:31.182837Z",
+     "start_time": "2025-07-22T15:13:31.014461Z"
     }
    },
    "cell_type": "code",
@@ -110,13 +173,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T19:48:41.432852Z",
-     "start_time": "2025-07-07T19:48:41.425523Z"
+     "end_time": "2025-07-22T15:13:31.218970Z",
+     "start_time": "2025-07-22T15:13:31.199045Z"
     }
    },
    "cell_type": "code",
@@ -132,20 +195,39 @@
        " 'total': 972.0}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-22T15:13:31.244478Z",
+     "start_time": "2025-07-22T15:13:31.236266Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "13cbffe612f96c3"
+   "source": "graph.invoke({\"amount_usd\":1000, \"target_currency\": \"INR\"})",
+   "id": "13cbffe612f96c3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'amount_usd': 1000,\n",
+       " 'total_usd': 1080.0,\n",
+       " 'target_currency': 'INR',\n",
+       " 'total': 91800.0}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   }
  ],
  "metadata": {
