--- a/4_tool_call.ipynb
+++ b/4_tool_call.ipynb
@@ -1,13 +1,25 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Tool‑Calling Agent with LangGraph\n",
+    "This notebook demonstrates how to:\n",
+    "1. Define external “tools” with the `@tool` decorator.\n",
+    "2. Bind those tools to an LLM.\n",
+    "3. Build a LangGraph `StateGraph` with a `ToolNode` to let the LLM call your Python functions."
+   ],
+   "id": "7f9d72ff0f44c702"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:00:01.033848Z",
-     "start_time": "2025-07-08T00:00:01.025682Z"
+     "end_time": "2025-07-22T17:30:40.168627Z",
+     "start_time": "2025-07-22T17:30:39.055443Z"
     }
    },
    "source": [
@@ -20,17 +32,18 @@
     "from langgraph.prebuilt import ToolNode, tools_condition"
    ],
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:00:01.908846Z",
-     "start_time": "2025-07-08T00:00:01.896729Z"
+     "end_time": "2025-07-22T17:30:40.191808Z",
+     "start_time": "2025-07-22T17:30:40.173680Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# load API keys & credentials from .env\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
    ],
@@ -42,83 +55,100 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:00:02.373660Z",
-     "start_time": "2025-07-08T00:00:02.367212Z"
+     "end_time": "2025-07-22T17:30:40.603640Z",
+     "start_time": "2025-07-22T17:30:40.598982Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class State(TypedDict):\n",
-    "    # Messages have the type \"list\". The 'add_messages' function\n",
-    "    # in the annotation defines how this state key should be updated\n",
-    "    # (in this case, it appends messages to the list, rather than overwriting them)\n",
+    "    \"\"\"\n",
+    "    Conversation state schema:\n",
+    "    - messages: list of {\"role\", \"content\"} entries for LLM context\n",
+    "    \"\"\"\n",
     "    messages: Annotated[list, add_messages]"
    ],
    "id": "54a3f559fe55409e",
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:00:02.778372Z",
-     "start_time": "2025-07-08T00:00:02.741754Z"
+     "end_time": "2025-07-22T17:30:41.230590Z",
+     "start_time": "2025-07-22T17:30:40.614652Z"
     }
    },
    "cell_type": "code",
    "source": [
     "@tool\n",
     "def get_stock_price(symbol: str) -> float:\n",
-    "    '''Return the current price of a stock given the stock symbol\n",
-    "    :param symbol: stock symbol\n",
-    "    :return: current price of the stock\n",
-    "    '''\n",
+    "    \"\"\"\n",
+    "    Return the current price of a stock given its symbol.\n",
+    "    :param symbol: e.g. \"AAPL\", \"MSFT\"\n",
+    "    :return: current price of the stock as float\n",
+    "    \"\"\"\n",
     "    return {\n",
     "        \"MSFT\" : 200.3,\n",
     "        \"AAPL\" : 100.4,\n",
-    "        \"AMZN\" : 150.0,\n",
-    "        \"RIL\" : 87.6\n",
+    "        \"AMZN\" : 150.0\n",
     "    }.get(symbol, 0.0)\n",
     "\n",
     "tools = [get_stock_price]\n",
     "\n",
-    "llm = init_chat_model(\"google_genai:gemini-2.0-flash\")\n",
-    "llm_with_tools = llm.bind_tools(tools)"
+    "llm = init_chat_model(\"google_genai:gemini-2.0-flash\")  # initialize LLM\n",
+    "llm_with_tools = llm.bind_tools(tools)                  # attach tools"
    ],
    "id": "9a46b796a9de1ee9",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Build the Graph with ToolNode\n",
+    "- Node `chatbot` runs the LLM (with tool binding).\n",
+    "- Node `tools` executes actual tool calls.\n",
+    "- Use `tools_condition` to route tool invocations."
+   ],
+   "id": "82147a57f926adc5"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:00:03.791605Z",
-     "start_time": "2025-07-08T00:00:03.234925Z"
+     "end_time": "2025-07-22T17:30:41.554766Z",
+     "start_time": "2025-07-22T17:30:41.242075Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def chatbot(state: State):\n",
+    "    \"\"\"\n",
+    "    Invoke the LLM (with tools) on current messages.\n",
+    "    \"\"\"\n",
     "    return {\"messages\": [llm_with_tools.invoke(state[\"messages\"])]}\n",
     "\n",
     "builder = StateGraph(State)\n",
-    "builder.add_node(chatbot)\n",
-    "builder.add_node(\"tools\", ToolNode(tools))\n",
     "\n",
-    "builder.add_edge(START, \"chatbot\")\n",
-    "builder.add_conditional_edges(\"chatbot\", tools_condition)\n",
-    "builder.add_edge(\"chatbot\", END)\n",
+    "builder.add_node(chatbot)                       # LLM node\n",
+    "builder.add_node(\"tools\", ToolNode(tools))      # Tool execution node\n",
     "\n",
+    "builder.add_edge(START, \"chatbot\")              # start → chatbot\n",
+    "builder.add_conditional_edges(\"chatbot\", tools_condition)  # route to tools if needed\n",
+    "builder.add_edge(\"chatbot\", END)                # chatbot → end\n",
+    "\n",
+    "# compile into executable graph\n",
     "graph = builder.compile()\n",
     "\n",
     "from IPython.display import Image, display\n",
@@ -138,13 +168,34 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 37
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Testing the Tool‑Calling Graph\n",
+    "\n",
+    "We’ll run three tests in sequence:\n",
+    "\n",
+    "1. **Simple Price Query**\n",
+    "   Ask a single‐tool question (e.g. “What is the price for MSFT right now?”). This should succeed, since it triggers exactly one tool call and returns the expected answer.\n",
+    "\n",
+    "2. **Compound Query**\n",
+    "   Mix a factual question with a tool‐based one (e.g. “Who invented Apple? What is the stock price for AAPL right now?”).\n",
+    "   _Issue:_ the graph only processes one node per run, so it cannot both answer a factual prompt and call a tool in the same invocation.\n",
+    "\n",
+    "3. **Multi‑Tool Sequence**\n",
+    "   Request multiple tool calls (e.g. “Buy 20 AMZN then 15 MSFT—what’s the total cost?”).\n",
+    "   _Issue:_ beyond triggering multiple tools, calculating the sum of their results requires additional reasoning logic that the current single‐tool Node setup does not support."
+   ],
+   "id": "edf691cc897d4e00"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:00:10.900479Z",
-     "start_time": "2025-07-08T00:00:09.793556Z"
+     "end_time": "2025-07-22T17:30:42.717117Z",
+     "start_time": "2025-07-22T17:30:41.594033Z"
     }
    },
    "cell_type": "code",
@@ -162,13 +213,13 @@
      ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:00:40.887020Z",
-     "start_time": "2025-07-08T00:00:40.077603Z"
+     "end_time": "2025-07-22T17:30:43.485941Z",
+     "start_time": "2025-07-22T17:30:42.731041Z"
     }
    },
    "cell_type": "code",
@@ -186,13 +237,13 @@
      ]
     }
    ],
-   "execution_count": 39
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:00:57.843110Z",
-     "start_time": "2025-07-08T00:00:57.085114Z"
+     "end_time": "2025-07-22T17:30:44.286997Z",
+     "start_time": "2025-07-22T17:30:43.509391Z"
     }
    },
    "cell_type": "code",
@@ -212,15 +263,7 @@
      ]
     }
    ],
-   "execution_count": 40
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "e70d7360d9ae12fa"
+   "execution_count": 8
   }
  ],
  "metadata": {
