--- a/5_tool_call_agent.ipynb
+++ b/5_tool_call_agent.ipynb
@@ -1,13 +1,25 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Agentic Stock‑Price Tool Demo\n",
+    "This notebook builds on tool‑calling to create a simple stock‑price agent:\n",
+    "1. Define a Python `@tool` for fetching stock prices.\n",
+    "2. Bind the tool to Google Gemini‑2.0‑Flash.\n",
+    "3. Assemble a LangGraph `StateGraph` with a `ToolNode`.\n",
+    "4. Visualize the graph and test single, compound, and multi‑tool queries."
+   ],
+   "id": "63bfe8d2db409274"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:21.572846Z",
-     "start_time": "2025-07-08T00:01:21.558347Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -20,13 +32,13 @@
     "from langgraph.prebuilt import ToolNode, tools_condition"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:21.989032Z",
-     "start_time": "2025-07-08T00:01:21.973225Z"
+     "end_time": "2025-07-22T17:46:08.971757200Z",
+     "start_time": "2025-07-22T17:45:57.053329Z"
     }
    },
    "cell_type": "code",
@@ -42,87 +54,106 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:22.316029Z",
-     "start_time": "2025-07-08T00:01:22.310420Z"
+     "end_time": "2025-07-22T17:46:08.987627400Z",
+     "start_time": "2025-07-22T17:45:57.129912Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class State(TypedDict):\n",
-    "    # Messages have the type \"list\". The 'add_messages' function\n",
-    "    # in the annotation defines how this state key should be updated\n",
-    "    # (in this case, it appends messages to the list, rather than overwriting them)\n",
+    "    \"\"\"\n",
+    "    Conversation state schema:\n",
+    "    - messages: list of {\"role\",\"content\"} dicts, appended automatically\n",
+    "    \"\"\"\n",
     "    messages: Annotated[list, add_messages]"
    ],
    "id": "54a3f559fe55409e",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:22.689676Z",
-     "start_time": "2025-07-08T00:01:22.654211Z"
+     "end_time": "2025-07-22T17:46:08.987627400Z",
+     "start_time": "2025-07-22T17:45:57.158784Z"
     }
    },
    "cell_type": "code",
    "source": [
     "@tool\n",
     "def get_stock_price(symbol: str) -> float:\n",
-    "    '''Return the current price of a stock given the stock symbol\n",
-    "    :param symbol: stock symbol\n",
-    "    :return: current price of the stock\n",
-    "    '''\n",
+    "    \"\"\"\n",
+    "    Return the current price of a stock given its symbol.\n",
+    "    :param symbol: e.g. \"AAPL\", \"MSFT\"\n",
+    "    :return: current price of the stock as float\n",
+    "    \"\"\"\n",
+    "    # Mocked price lookup for demo purposes\n",
     "    return {\n",
     "        \"MSFT\" : 200.3,\n",
     "        \"AAPL\" : 100.4,\n",
-    "        \"AMZN\" : 150.0,\n",
-    "        \"RIL\" : 87.6\n",
+    "        \"AMZN\" : 150.0\n",
     "    }.get(symbol, 0.0)\n",
     "\n",
+    "# Prepare the tools' list and bind to the LLM\n",
     "tools = [get_stock_price]\n",
     "\n",
-    "llm = init_chat_model(\"google_genai:gemini-2.0-flash\")\n",
-    "llm_with_tools = llm.bind_tools(tools)"
+    "llm = init_chat_model(\"google_genai:gemini-2.0-flash\")  # initialize LLM\n",
+    "llm_with_tools = llm.bind_tools(tools)                # attach tools"
    ],
    "id": "9a46b796a9de1ee9",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Build the Agent Graph\n",
+    "- Node `chatbot` invokes the LLM (with bound tools).\n",
+    "- Node `tools` executes the Python function when requested.\n",
+    "- Edges: START → chatbot → (tools_condition) → tools → chatbot → END."
+   ],
+   "id": "6415485f93f1238c"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:23.310782Z",
-     "start_time": "2025-07-08T00:01:23.157967Z"
+     "end_time": "2025-07-22T17:46:08.987627400Z",
+     "start_time": "2025-07-22T17:45:58.005181Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def chatbot(state: State):\n",
+    "    \"\"\"\n",
+    "    Invoke the LLM (with tools) on the conversation state.\n",
+    "    \"\"\"\n",
     "    return {\"messages\": [llm_with_tools.invoke(state[\"messages\"])]}\n",
     "\n",
     "builder = StateGraph(State)\n",
-    "builder.add_node(chatbot)\n",
-    "builder.add_node(\"tools\", ToolNode(tools))\n",
+    "builder.add_node(\"chatbot\", chatbot)          # LLM node\n",
+    "builder.add_node(\"tools\", ToolNode(tools))    # Tool execution node\n",
     "\n",
-    "builder.add_edge(START, \"chatbot\")\n",
-    "builder.add_conditional_edges(\"chatbot\", tools_condition)\n",
-    "builder.add_edge(\"tools\", \"chatbot\")\n",
+    "# Wire up the execution order\n",
+    "builder.add_edge(START, \"chatbot\")                          # start → chatbot\n",
+    "builder.add_conditional_edges(\"chatbot\", tools_condition)   # route to tools if needed\n",
+    "builder.add_edge(\"tools\", \"chatbot\")                        # tool result → chatbot\n",
+    "builder.add_edge(\"chatbot\", END)                            # chatbot → end\n",
     "\n",
+    "# Compile and visualize\n",
     "graph = builder.compile()\n",
     "\n",
     "from IPython.display import Image, display\n",
-    "\n",
     "display(Image(graph.get_graph().draw_mermaid_png()))"
    ],
    "id": "fbe837eda71fc13c",
@@ -138,13 +169,36 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 19
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Testing the Agent Graph\n",
+    "\n",
+    "We’ll verify three use cases:\n",
+    "\n",
+    "1. **Simple Price Query**\n",
+    "   Single‐tool call (e.g. “What is the price for MSFT stock right now?”).\n",
+    "\n",
+    "2. **Compound Query**\n",
+    "   Mix factual and tool‐based prompts (e.g. “Who invented Apple? What is the stock price for AAPL right now?”).\n",
+    "   The LLM receives the tool’s output back into its context, so it can both answer the fact and fetch the price in one turn.\n",
+    "\n",
+    "3. **Multi‑Tool Sequence**\n",
+    "   Sequential tool calls with reasoning (e.g. “Buy 20 AMZN then 15 MSFT—what’s the total cost?”).\n",
+    "   Since each tool result is fed back into the LLM, it can chain calls and compute the sum of their outputs.\n",
+    "\n",
+    "_All three tests should succeed, demonstrating integrated tool reasoning and chaining._"
+   ],
+   "id": "455b492b65ef60a1"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:25.813575Z",
-     "start_time": "2025-07-08T00:01:24.258655Z"
+     "end_time": "2025-07-22T17:46:08.987627400Z",
+     "start_time": "2025-07-22T17:45:58.344310Z"
     }
    },
    "cell_type": "code",
@@ -158,17 +212,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current price for MSFT stock is 200.3.\n"
+      "The current price for MSFT stock is $200.3.\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:31.151968Z",
-     "start_time": "2025-07-08T00:01:29.755770Z"
+     "end_time": "2025-07-22T17:46:08.987627400Z",
+     "start_time": "2025-07-22T17:45:59.821142Z"
     }
    },
    "cell_type": "code",
@@ -186,13 +240,13 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T00:01:32.979621Z",
-     "start_time": "2025-07-08T00:01:31.216702Z"
+     "end_time": "2025-07-22T17:46:08.987627400Z",
+     "start_time": "2025-07-22T17:46:01.147474Z"
     }
    },
    "cell_type": "code",
@@ -208,22 +262,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK. The current price for AMZN is $150 and for MSFT is $200.3.\n",
-      "The total cost for 20 AMZN stocks is 20 * $150 = $3000.\n",
-      "The total cost for 15 MSFT stocks is 15 * $200.3 = $3004.5.\n",
-      "Therefore, the total cost for both is $3000 + $3004.5 = $6004.5.\n"
+      "OK. The current price of AMZN is $150 and MSFT is $200.3.\n",
+      "\n",
+      "The cost of 20 AMZN stocks is 20 * $150 = $3000.\n",
+      "The cost of 15 MSFT stocks is 15 * $200.3 = $3004.5.\n",
+      "\n",
+      "Therefore, the total cost is $3000 + $3004.5 = $6004.5.\n"
      ]
     }
    ],
-   "execution_count": 22
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "e70d7360d9ae12fa"
+   "execution_count": 8
   }
  ],
  "metadata": {
