--- a/6_memory.ipynb
+++ b/6_memory.ipynb
@@ -1,32 +1,43 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Persistent Memory with LangGraph\n",
+    "This notebook demonstrates how to enable per-thread memory using `MemorySaver`:\n",
+    "1. Run a multi-tool query in Thread 1.\n",
+    "2. Run a simple query in Thread 2.\n",
+    "3. Ask both threads to \"add to previous total\"—each should only use its own thread history."
+   ],
+   "id": "d858e7f4f0c6a289"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:03.413998Z",
-     "start_time": "2025-07-07T22:00:03.410962Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
-    "from langchain.chat_models import init_chat_model\n",
     "from typing import Annotated\n",
     "from typing_extensions import TypedDict\n",
+    "from langchain.chat_models import init_chat_model\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "from langgraph.graph.message import add_messages\n",
     "from langchain_core.tools import tool\n",
     "from langgraph.prebuilt import ToolNode, tools_condition"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:03.427008Z",
-     "start_time": "2025-07-07T22:00:03.422992Z"
+     "end_time": "2025-07-23T00:26:55.947258100Z",
+     "start_time": "2025-07-22T17:51:35.240810Z"
     }
    },
    "cell_type": "code",
@@ -42,64 +53,67 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:03.439872Z",
-     "start_time": "2025-07-07T22:00:03.436851Z"
+     "end_time": "2025-07-23T00:26:55.951732500Z",
+     "start_time": "2025-07-22T17:51:35.285412Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from langgraph.checkpoint.memory import MemorySaver\n",
-    "\n",
+    "# Instantiate `MemorySaver` to checkpoint state per thread.\n",
     "memory = MemorySaver()"
    ],
    "id": "46cc0d42b798053f",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:03.455195Z",
-     "start_time": "2025-07-07T22:00:03.451647Z"
+     "end_time": "2025-07-23T00:26:55.951732500Z",
+     "start_time": "2025-07-22T17:51:35.326253Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class State(TypedDict):\n",
-    "    # Messages have the type \"list\". The 'add_messages' function\n",
-    "    # in the annotation defines how this state key should be updated\n",
-    "    # (in this case, it appends messages to the list, rather than overwriting them)\n",
+    "    \"\"\"\n",
+    "    Conversation state schema:\n",
+    "    - messages: list of {\"role\",\"content\"} dicts, appended automatically.\n",
+    "    \"\"\"\n",
     "    messages: Annotated[list, add_messages]"
    ],
    "id": "54a3f559fe55409e",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:03.469479Z",
-     "start_time": "2025-07-07T22:00:03.461292Z"
+     "end_time": "2025-07-23T00:26:55.951732500Z",
+     "start_time": "2025-07-22T17:51:35.353098Z"
     }
    },
    "cell_type": "code",
    "source": [
     "@tool\n",
     "def get_stock_price(symbol: str) -> float:\n",
-    "    '''Return the current price of a stock given the stock symbol\n",
-    "    :param symbol: stock symbol\n",
-    "    :return: current price of the stock\n",
-    "    '''\n",
+    "    \"\"\"\n",
+    "    Return the current price of a stock given its symbol.\n",
+    "    :param symbol: e.g. \"AAPL\", \"MSFT\"\n",
+    "    :return: current price of the stock as float\n",
+    "    \"\"\"\n",
+    "    # Mocked price lookup for demo purposes\n",
     "    return {\n",
     "        \"MSFT\" : 200.3,\n",
     "        \"AAPL\" : 100.4,\n",
@@ -107,35 +121,44 @@
     "        \"RIL\" : 87.6\n",
     "    }.get(symbol, 0.0)\n",
     "\n",
+    "# Prepare the tools' list and bind to the LLM\n",
     "tools = [get_stock_price]\n",
     "\n",
-    "llm = init_chat_model(\"google_genai:gemini-2.0-flash\")\n",
-    "llm_with_tools = llm.bind_tools(tools)"
+    "llm = init_chat_model(\"google_genai:gemini-2.0-flash\")  # initialize LLM\n",
+    "llm_with_tools = llm.bind_tools(tools)                # attach tools"
    ],
    "id": "9a46b796a9de1ee9",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:03.575997Z",
-     "start_time": "2025-07-07T22:00:03.481213Z"
+     "end_time": "2025-07-23T00:26:55.951732500Z",
+     "start_time": "2025-07-22T17:51:36.167163Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def chatbot(state: State):\n",
+    "    \"\"\"\n",
+    "    Invoke the LLM (with tools) on the conversation state.\n",
+    "    \"\"\"\n",
     "    return {\"messages\": [llm_with_tools.invoke(state[\"messages\"])]}\n",
     "\n",
+    "# Build the graph with a chatbot node and a ToolNode\n",
     "builder = StateGraph(State)\n",
-    "builder.add_node(chatbot)\n",
+    "builder.add_node(\"chatbot\", chatbot)\n",
     "builder.add_node(\"tools\", ToolNode(tools))\n",
     "\n",
+    "# Wire up execution order:\n",
+    "# START → chatbot → (tools_condition) → tools → chatbot → END\n",
     "builder.add_edge(START, \"chatbot\")\n",
     "builder.add_conditional_edges(\"chatbot\", tools_condition)\n",
     "builder.add_edge(\"tools\", \"chatbot\")\n",
+    "builder.add_edge(\"chatbot\", END)\n",
     "\n",
+    "# Compile the graph with memory enabled\n",
     "graph = builder.compile(checkpointer=memory)\n",
     "\n",
     "from IPython.display import Image, display\n",
@@ -155,17 +178,30 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 35
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Memory Demonstration Across Threads\n",
+    "We will test two threads:\n",
+    "- **Thread 1**: run a multi-tool query, then ask to add to its previous total.\n",
+    "- **Thread 2**: run a simple query, then add to its previous total.\n",
+    "Each thread should only use its own past results (thanks to `MemorySaver`)."
+   ],
+   "id": "d2c083467b43fa89"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:05.359249Z",
-     "start_time": "2025-07-07T22:00:03.585312Z"
+     "end_time": "2025-07-23T00:26:55.951732500Z",
+     "start_time": "2025-07-22T17:51:36.567772Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# Thread 1: run a multi-tool query\n",
     "config1 = {'configurable': {'thread_id': '1'}}\n",
     "\n",
     "msg = \"I want to buy 20 AMZN stocks using current price. Then 15 MSFT. What will be the total cost?\"\n",
@@ -179,24 +215,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK. The current price for AMZN is $150 and for MSFT is $200.3.\n",
+      "The current price for AMZN is $150 and for MSFT is $200.3.\n",
       "The total cost for 20 AMZN stocks is 20 * $150 = $3000.\n",
       "The total cost for 15 MSFT stocks is 15 * $200.3 = $3004.5.\n",
       "Therefore, the total cost for both is $3000 + $3004.5 = $6004.5.\n"
      ]
     }
    ],
-   "execution_count": 36
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:06.656487Z",
-     "start_time": "2025-07-07T22:00:05.407599Z"
+     "end_time": "2025-07-23T00:26:55.951732500Z",
+     "start_time": "2025-07-22T17:51:39.314271Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# Thread 2: run a simple single-tool query\n",
     "config2 = {'configurable': {'thread_id': '2'}}\n",
     "\n",
     "msg = \"Tell me the current price of 5 AAPL stocks.\"\n",
@@ -210,21 +247,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current price of one AAPL stock is 100.4. Therefore, the current price of 5 AAPL stocks is 502.0.\n"
+      "The current price of one AAPL stock is 100.4. Therefore, the current price of 5 AAPL stocks is 5 * 100.4 = 502.\n"
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:08.035714Z",
-     "start_time": "2025-07-07T22:00:06.673311Z"
+     "end_time": "2025-07-23T00:26:55.951732500Z",
+     "start_time": "2025-07-22T17:51:40.601829Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# Thread 1: add to its previous total (should reference only Thread 1 history)\n",
     "msg = \"Using the current price tell me the total price of 10 RIL stocks and add it to previous total\"\n",
     "\n",
     "state = graph.invoke({\"messages\": [{\"role\": \"user\", \"content\": msg}]}, config=config1)\n",
@@ -236,23 +274,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK. The current price for RIL is $87.6.\n",
+      "The current price for RIL is $87.6.\n",
       "The total cost for 10 RIL stocks is 10 * $87.6 = $876.\n",
       "Adding this to the previous total cost of $6004.5, the new total is $6004.5 + $876 = $6880.5.\n"
      ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:00:09.311755Z",
-     "start_time": "2025-07-07T22:00:08.056941Z"
+     "end_time": "2025-07-23T00:26:55.951732500Z",
+     "start_time": "2025-07-22T17:51:42.580847Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# Thread 2: add to its previous total (should reference only Thread 2 history)\n",
     "msg = \"Tell me the current price of 5 MSFT stocks and add it to previous total\"\n",
     "\n",
     "state = graph.invoke({\"messages\": [{\"role\": \"user\", \"content\": msg}]}, config=config2)\n",
@@ -264,11 +303,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current price of one MSFT stock is 200.3. Therefore, the current price of 5 MSFT stocks is 1001.5. Adding that to the previous total of 502.0, the new total is 1503.5.\n"
+      "The current price of one MSFT stock is 200.3. Therefore, the current price of 5 MSFT stocks is 5 * 200.3 = 1001.5. Adding this to the previous total of 502, the new total is 1001.5 + 502 = 1503.5.\n"
      ]
     }
    ],
-   "execution_count": 39
+   "execution_count": 10
   }
  ],
  "metadata": {
