--- a/7_langsmith.ipynb
+++ b/7_langsmith.ipynb
@@ -1,13 +1,23 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# LangSmith Tracing\n",
+    "\n",
+    "This notebook shows how to use LangSmith to trace the execution of a LangGraph agent.\n",
+    "Tracing is enabled through the `@traceable` decorator and environment variables; see the screenshots at the end for an example run.\n"
+   ],
+   "id": "5cf7e21bac63a690"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-07-07T22:56:13.040074Z",
-     "start_time": "2025-07-07T22:56:11.890354Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -20,13 +30,13 @@
     "from langgraph.prebuilt import ToolNode, tools_condition"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:56:13.895550Z",
-     "start_time": "2025-07-07T22:56:13.883527Z"
+     "end_time": "2025-07-25T00:06:41.128059100Z",
+     "start_time": "2025-07-23T01:17:22.620437Z"
     }
    },
    "cell_type": "code",
@@ -42,37 +52,38 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:56:22.467630Z",
-     "start_time": "2025-07-07T22:56:22.461046Z"
+     "end_time": "2025-07-25T00:06:41.128059100Z",
+     "start_time": "2025-07-23T01:17:22.665419Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class State(TypedDict):\n",
-    "    # Messages have the type \"list\". The 'add_messages' function\n",
-    "    # in the annotation defines how this state key should be updated\n",
-    "    # (in this case, it appends messages to the list, rather than overwriting them)\n",
+    "    \"\"\"\n",
+    "    Conversation state schema:\n",
+    "    - messages: list of {\"role\", \"content\"} chat messages\n",
+    "    \"\"\"\n",
     "    messages: Annotated[list, add_messages]"
    ],
    "id": "54a3f559fe55409e",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:56:24.867307Z",
-     "start_time": "2025-07-07T22:56:23.567759Z"
+     "end_time": "2025-07-25T00:06:41.135247600Z",
+     "start_time": "2025-07-23T01:17:22.681277Z"
     }
    },
    "cell_type": "code",
@@ -97,27 +108,33 @@
    ],
    "id": "9a46b796a9de1ee9",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:56:26.136948Z",
-     "start_time": "2025-07-07T22:56:25.969827Z"
+     "end_time": "2025-07-25T00:06:41.135247600Z",
+     "start_time": "2025-07-23T01:17:23.279573Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def chatbot(state: State):\n",
+    "    \"\"\"\n",
+    "    Node that calls the LLM with tools.\n",
+    "    \"\"\"\n",
     "    return {\"messages\": [llm_with_tools.invoke(state[\"messages\"])]}\n",
     "\n",
+    "# Create graph with tool and chatbot nodes\n",
     "builder = StateGraph(State)\n",
-    "builder.add_node(chatbot)\n",
+    "builder.add_node(\"chatbot\", chatbot)\n",
     "builder.add_node(\"tools\", ToolNode(tools))\n",
     "\n",
+    "# Execution flow: START → chatbot → tools? → chatbot → END\n",
     "builder.add_edge(START, \"chatbot\")\n",
     "builder.add_conditional_edges(\"chatbot\", tools_condition)\n",
     "builder.add_edge(\"tools\", \"chatbot\")\n",
+    "builder.add_edge(\"chatbot\", END)\n",
     "\n",
     "graph = builder.compile()\n",
     "\n",
@@ -138,13 +155,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T22:56:30.737145Z",
-     "start_time": "2025-07-07T22:56:28.673955Z"
+     "end_time": "2025-07-25T00:06:41.135247600Z",
+     "start_time": "2025-07-23T01:17:23.451136Z"
     }
    },
    "cell_type": "code",
@@ -163,23 +180,55 @@
     {
      "data": {
       "text/plain": [
-       "'The current price for AMZN is $150 and for MSFT is $200.3.\\nTo buy 20 AMZN stocks, it would cost 20 * $150 = $3000.\\nTo buy 15 MSFT stocks, it would cost 15 * $200.3 = $3004.5.\\nThe total cost would be $3000 + $3004.5 = $6004.5.'"
+       "'The current price for AMZN is $150 and for MSFT is $200.3.\\nTo buy 20 AMZN stocks, it would cost 20 * $150 = $3000.\\nTo buy 15 MSFT stocks, it would cost 15 * $200.3 = $3004.5.\\nTherefore, the total cost would be $3000 + $3004.5 = $6004.5.'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "1fe4108a8930f701"
+   "cell_type": "markdown",
+   "source": [
+    "## LangSmith Waterfall View\n",
+    "\n",
+    "Once the graph runs, LangSmith captures the full trace of execution.\n",
+    "\n",
+    "Here’s a **waterfall view** showing a multi-tool query asking for 20 AMZN and 15 MSFT stocks:\n",
+    "\n",
+    "![LangSmith Trace Overview](docs/7_trace_waterfall_view.png)"
+   ],
+   "id": "95a2c9fbe3475f1c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## LLM Reasoning and Tool Usage\n",
+    "\n",
+    "The LLM parses the full question, determines it needs both stock prices, and makes two tool calls (`get_stock_price`).\n",
+    "\n",
+    "![LLM Invoking Tools](docs/7_llm_calls_tool.png)\n"
+   ],
+   "id": "b394efba2633676c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Tool Execution Details\n",
+    "\n",
+    "LangSmith records each tool call individually, including the input/output payload.\n",
+    "\n",
+    "Here’s the detailed trace for the AMZN price lookup:\n",
+    "\n",
+    "![Tool Call Output](docs/7_tool_output.png)"
+   ],
+   "id": "29f289a22a665b6d"
   }
  ],
  "metadata": {
