--- a/9_agent_real_time_stock_price.ipynb
+++ b/9_agent_real_time_stock_price.ipynb
@@ -1,13 +1,31 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# End-to-End Agent: Real-Time Stock Price Analysis\n",
+    "\n",
+    "This notebook demonstrates a **complete agentic workflow** using LangGraph:\n",
+    "1. Fetch **live financial data** from the **Alpha Vantage API** (instead of demo prices).\n",
+    "2. Use multiple tools (real-time price, company overview, earnings, etc.).\n",
+    "3. Integrate reasoning to answer complex stock-related questions.\n",
+    "\n",
+    "**Automatic Tracing:**\n",
+    "LangSmith tracing works automatically if `LANGCHAIN_API_KEY` and related environment variables are set, even without explicit tracers.\n",
+    "\n",
+    "At the end, a public LangSmith trace link is provided as an example.\n"
+   ],
+   "id": "fc94f4c91eb12c59"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-15T22:51:27.800068Z",
-     "start_time": "2025-07-15T22:51:26.433471Z"
+     "end_time": "2025-08-08T23:17:24.860175Z",
+     "start_time": "2025-08-08T23:17:24.065484Z"
     }
    },
    "source": [
@@ -27,8 +45,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T22:51:27.835871Z",
-     "start_time": "2025-07-15T22:51:27.815204Z"
+     "end_time": "2025-08-08T23:17:24.886342Z",
+     "start_time": "2025-08-08T23:17:24.873617Z"
     }
    },
    "cell_type": "code",
@@ -54,8 +72,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T22:51:28.285007Z",
-     "start_time": "2025-07-15T22:51:28.273237Z"
+     "end_time": "2025-08-08T23:17:24.897986Z",
+     "start_time": "2025-08-08T23:17:24.892807Z"
     }
    },
    "cell_type": "code",
@@ -71,16 +89,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T22:51:28.306993Z",
-     "start_time": "2025-07-15T22:51:28.302469Z"
+     "end_time": "2025-08-08T23:17:24.933746Z",
+     "start_time": "2025-08-08T23:17:24.929905Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class State(TypedDict):\n",
-    "    # Messages have the type \"list\". The 'add_messages' function\n",
-    "    # in the annotation defines how this state key should be updated\n",
-    "    # (in this case, it appends messages to the list, rather than overwriting them)\n",
+    "    \"\"\"\n",
+    "    Conversation state schema:\n",
+    "    - messages: list of {\"role\", \"content\"} chat messages\n",
+    "    \"\"\"\n",
     "    messages: Annotated[list, add_messages]"
    ],
    "id": "54a3f559fe55409e",
@@ -90,15 +109,35 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T22:51:29.294087Z",
-     "start_time": "2025-07-15T22:51:28.457997Z"
+     "end_time": "2025-08-08T23:17:25.473135Z",
+     "start_time": "2025-08-08T23:17:24.937906Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "\n",
-    "# Common helper function for Alpha Vantage API calls\n",
+    "# ── Common helper function for Alpha Vantage API calls ───────────────────────\n",
     "def alpha_vantage_call(params: dict) -> dict:\n",
+    "    \"\"\"\n",
+    "    Makes a request to the Alpha Vantage API with the given parameters.\n",
+    "\n",
+    "    This function automatically:\n",
+    "      - Reads the base URL and API key from environment variables.\n",
+    "      - Adds the API key to the request parameters.\n",
+    "      - Sends a GET request and returns the JSON response.\n",
+    "\n",
+    "    Environment Variables Required:\n",
+    "      - ALPHA_VANTAGE_BASE_URL\n",
+    "      - ALPHA_VANTAGE_API_KEY\n",
+    "\n",
+    "    Args:\n",
+    "        params (dict): Parameters for the Alpha Vantage API call.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Parsed JSON response from the API.\n",
+    "\n",
+    "    Raises:\n",
+    "        HTTPError: If the API request fails (non-200 status code).\n",
+    "    \"\"\"\n",
     "    base_url = os.getenv(\"ALPHA_VANTAGE_BASE_URL\")\n",
     "    api_key = os.getenv(\"ALPHA_VANTAGE_API_KEY\")\n",
     "\n",
@@ -107,13 +146,23 @@
     "    response.raise_for_status()\n",
     "    return response.json()\n",
     "\n",
-    "# Define tools for each functionality\n",
+    "\n",
+    "# ── Define tools for each functionality ─────────────────────────────────────\n",
     "\n",
     "@tool\n",
     "def get_realtime_stock(symbol: str) -> str:\n",
     "    \"\"\"\n",
-    "    Fetches the real-time stock price for a given symbol.\n",
-    "    Official documentation: https://www.alphavantage.co/documentation/#intraday\n",
+    "    Fetches the latest available intraday stock price for the given symbol.\n",
+    "\n",
+    "    API Reference:\n",
+    "        https://www.alphavantage.co/documentation/#intraday\n",
+    "\n",
+    "    Args:\n",
+    "        symbol (str): Stock ticker symbol (e.g., \"AAPL\", \"MSFT\").\n",
+    "\n",
+    "    Returns:\n",
+    "        str: Latest stock price in USD, formatted to 2 decimal places.\n",
+    "             Returns an error message if no data is available.\n",
     "    \"\"\"\n",
     "    data = alpha_vantage_call({\n",
     "        \"function\": \"TIME_SERIES_INTRADAY\",\n",
@@ -127,11 +176,21 @@
     "    latest_data = time_series[latest_timestamp]\n",
     "    return f\"The latest price for {symbol.upper()} is ${float(latest_data['1. open']):.2f}.\"\n",
     "\n",
+    "\n",
     "@tool\n",
     "def search_ticker(company_name: str) -> str:\n",
     "    \"\"\"\n",
-    "    Searches the stock ticker symbol for a given company name.\n",
-    "    Official documentation: https://www.alphavantage.co/documentation/#symbolsearch\n",
+    "    Searches for ticker symbols that match the given company name.\n",
+    "\n",
+    "    API Reference:\n",
+    "        https://www.alphavantage.co/documentation/#symbolsearch\n",
+    "\n",
+    "    Args:\n",
+    "        company_name (str): Partial or full name of the company.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: List of matching ticker symbols with company name and region.\n",
+    "             Returns a message if no results are found.\n",
     "    \"\"\"\n",
     "    data = alpha_vantage_call({\n",
     "        \"function\": \"SYMBOL_SEARCH\",\n",
@@ -144,11 +203,21 @@
     "               for match in best_matches]\n",
     "    return f\"Search results for '{company_name}':\\n\" + \"\\n\".join(results)\n",
     "\n",
+    "\n",
     "@tool\n",
     "def get_company_overview(symbol: str) -> str:\n",
     "    \"\"\"\n",
-    "    Fetches the company overview, including key financial metrics.\n",
-    "    Official documentation: https://www.alphavantage.co/documentation/#company-overview\n",
+    "    Retrieves a company's overview and key financial metrics.\n",
+    "\n",
+    "    API Reference:\n",
+    "        https://www.alphavantage.co/documentation/#company-overview\n",
+    "\n",
+    "    Args:\n",
+    "        symbol (str): Stock ticker symbol.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: Overview including sector, industry, market cap, revenue, EPS, and P/E ratio.\n",
+    "             Returns a message if no data is found.\n",
     "    \"\"\"\n",
     "    data = alpha_vantage_call({\n",
     "        \"function\": \"OVERVIEW\",\n",
@@ -161,11 +230,21 @@
     "            f\"Market Cap: {data.get('MarketCapitalization')}\\nRevenue: {data.get('RevenueTTM')}\\n\"\n",
     "            f\"EPS: {data.get('EPS')}\\nPE Ratio: {data.get('PERatio')}\")\n",
     "\n",
+    "\n",
     "@tool\n",
     "def get_earnings_data(symbol: str) -> str:\n",
     "    \"\"\"\n",
-    "    Fetches recent earnings data for a given symbol.\n",
-    "    Official documentation: https://www.alphavantage.co/documentation/#earnings\n",
+    "    Fetches the most recent quarterly earnings report for the given symbol.\n",
+    "\n",
+    "    API Reference:\n",
+    "        https://www.alphavantage.co/documentation/#earnings\n",
+    "\n",
+    "    Args:\n",
+    "        symbol (str): Stock ticker symbol.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: Latest quarterly earnings data (fiscal date, reported EPS, estimated EPS).\n",
+    "             Returns a message if no earnings data is found.\n",
     "    \"\"\"\n",
     "    data = alpha_vantage_call({\n",
     "        \"function\": \"EARNINGS\",\n",
@@ -180,12 +259,26 @@
     "    return (f\"Earnings Data for {symbol.upper()}:\\nFiscal Date Ending: {latest_earnings['fiscalDateEnding']}\\n\"\n",
     "            f\"Reported EPS: {latest_earnings['reportedEPS']}\\nEstimated EPS: {latest_earnings.get('estimatedEPS', 'N/A')}.\")\n",
     "\n",
+    "\n",
     "@tool\n",
     "def get_historical_stock_data(symbol: str, interval: str = \"daily\") -> str:\n",
     "    \"\"\"\n",
-    "    Fetches and summarizes historical stock data for a given symbol and interval.\n",
-    "    Only returns a summary rather than the full time series.\n",
-    "    Official documentation: https://www.alphavantage.co/documentation/\n",
+    "    Fetches and summarizes historical stock price data for the given symbol and interval.\n",
+    "\n",
+    "    Only summary metrics are returned (latest date, open/close price, highest/lowest price,\n",
+    "    total trading volume).\n",
+    "\n",
+    "    API Reference:\n",
+    "        https://www.alphavantage.co/documentation/\n",
+    "\n",
+    "    Args:\n",
+    "        symbol (str): Stock ticker symbol.\n",
+    "        interval (str): Time interval for historical data. Options:\n",
+    "                        \"daily\" (default), \"weekly\", \"monthly\".\n",
+    "\n",
+    "    Returns:\n",
+    "        str: Summary of historical stock performance.\n",
+    "             Returns an error message if data is unavailable.\n",
     "    \"\"\"\n",
     "    try:\n",
     "        function_mapping = {\n",
@@ -240,27 +333,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T22:51:29.570256Z",
-     "start_time": "2025-07-15T22:51:29.312129Z"
+     "end_time": "2025-08-08T23:17:25.679867Z",
+     "start_time": "2025-08-08T23:17:25.476210Z"
     }
    },
    "cell_type": "code",
    "source": [
     "\n",
-    "# Function to process user input\n",
-    "def chatbot_node(state: State):\n",
-    "    msg = llm_with_tools.invoke(state[\"messages\"])\n",
-    "    return {\"messages\": [msg]}\n",
+    "def chatbot(state: State):\n",
+    "    \"\"\"\n",
+    "    LLM node: takes user messages, calls tools if required, and reasons over results.\n",
+    "    \"\"\"\n",
+    "    return {\"messages\": [llm_with_tools.invoke(state[\"messages\"])]}\n",
     "\n",
-    "# Build LangGraph\n",
     "builder = StateGraph(State)\n",
-    "builder.add_node(\"chatbot\", chatbot_node)\n",
+    "builder.add_node(\"chatbot\", chatbot)\n",
     "builder.add_node(\"tools\", ToolNode(tools))\n",
     "\n",
     "builder.add_edge(START, \"chatbot\")\n",
     "builder.add_conditional_edges(\"chatbot\", tools_condition)\n",
     "builder.add_edge(\"tools\", \"chatbot\")\n",
+    "builder.add_edge(\"chatbot\", END)\n",
     "\n",
+    "# Compile graph with memory enabled (tracing auto-enabled via environment vars)\n",
     "graph = builder.compile(checkpointer=memory)\n",
     "\n",
     "from IPython.display import Image, display\n",
@@ -283,10 +378,25 @@
    "execution_count": 6
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Test the End-to-End Agent\n",
+    "\n",
+    "Ask complex questions combining multiple tools, e.g.:\n",
+    "- “What’s the current price of AMZN?”\n",
+    "- “Give me the latest earnings data for MSFT.”\n",
+    "- “Search for Apple’s ticker and give me its company overview.”\n",
+    "\n",
+    "The agent uses reasoning and real-time data fetching from Alpha Vantage.\n"
+   ],
+   "id": "bac95c12908d8869"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T22:52:02.481886Z",
-     "start_time": "2025-07-15T22:51:29.589257Z"
+     "end_time": "2025-08-08T23:17:42.160815Z",
+     "start_time": "2025-08-08T23:17:25.688263Z"
     }
    },
    "cell_type": "code",
@@ -296,6 +406,7 @@
     "state = None\n",
     "while True:\n",
     "    user_input = input(\"You: \").strip()\n",
+    "    print(\"Human:\", user_input)\n",
     "    if user_input.lower() in {\"quit\", \"exit\"}:\n",
     "        break\n",
     "\n",
@@ -313,7 +424,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: The current stock price for Booz Allen Hamilton Holding Corp (BAH) is $107.65.\n"
+      "Human: Amazon Overview\n",
+      "Bot: Okay, here's the overview for Amazon (AMZN):\n",
+      "\n",
+      "*   **Name:** Amazon.com Inc\n",
+      "*   **Sector:** TRADE & SERVICES\n",
+      "*   **Industry:** RETAIL-CATALOG & MAIL-ORDER HOUSES\n",
+      "*   **Market Cap:** 2379659084000\n",
+      "*   **Revenue:** 670038032000\n",
+      "*   **EPS:** 6.58\n",
+      "*   **PE Ratio:** 33.91\n",
+      "Human: exit\n"
      ]
     }
    ],
@@ -321,11 +442,75 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "4403803cc2949e62"
+   "cell_type": "markdown",
+   "source": [
+    "## 📊 Example LangSmith Trace — Multi-Tool Financial Data Retrieval\n",
+    "\n",
+    "This complete agent uses **memory (`MemorySaver`)** to maintain per-thread state, enabling multi-turn conversations and reasoning across queries.\n",
+    "LangSmith tracing is automatically enabled when the following environment variables are set:\n",
+    "\n",
+    "- `LANGCHAIN_API_KEY` – your LangSmith API key\n",
+    "- `LANGCHAIN_PROJECT` – project name where traces will be logged\n",
+    "- *(Optional)* `LANGCHAIN_ENDPOINT` – custom endpoint (otherwise default is used)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **About the Trace**\n",
+    "\n",
+    "Below is an example run captured from **LangSmith**, showing how the agent autonomously breaks down a user request, calls multiple Alpha Vantage tools, and combines the results into a final answer.\n",
+    "\n",
+    "This trace demonstrates:\n",
+    "- **Automatic tool selection** based on LLM reasoning\n",
+    "- **Chained tool calls** (`search_ticker` → `get_company_overview`)\n",
+    "- **Memory support** so the agent can reuse intermediate results\n",
+    "- **End-to-end execution** from natural language input to structured output\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Trace Overview**\n",
+    "<div style=\"display:grid; grid-template-columns: 1fr 1fr; gap: 14px; user-select:none; -webkit-user-select:none; -moz-user-select:none; -ms-user-select:none;\">\n",
+    "\n",
+    "  <!-- Row 1: Full-width overview -->\n",
+    "  <figure style=\"grid-column: 1 / -1; margin:0;\">\n",
+    "    <img src=\"docs/9_full_trace_flow.png\"\n",
+    "         alt=\"Full Trace Flow\"\n",
+    "         style=\"width:100%; border-radius:8px; display:block; pointer-events:none; -webkit-user-drag:none;\" />\n",
+    "    <figcaption style=\"margin-top:6px; font-weight:600;\">1️⃣ Full Trace Flow</figcaption>\n",
+    "  </figure>\n",
+    "\n",
+    "  <!-- Row 2: two side-by-side -->\n",
+    "  <figure style=\"margin:0;\">\n",
+    "    <img src=\"docs/9_initial_llm_reasoning.png\"\n",
+    "         alt=\"Initial LLM Reasoning & Tool List\"\n",
+    "         style=\"width:100%; border-radius:8px; display:block; pointer-events:none; -webkit-user-drag:none;\" />\n",
+    "    <figcaption style=\"margin-top:6px; font-weight:600;\">2️⃣ Initial LLM Reasoning & Tool List</figcaption>\n",
+    "  </figure>\n",
+    "\n",
+    "  <figure style=\"margin:0;\">\n",
+    "    <img src=\"docs/9_ticker_tool_call.png\"\n",
+    "         alt=\"search_ticker Tool Call & Output\"\n",
+    "         style=\"width:100%; border-radius:8px; display:block; pointer-events:none; -webkit-user-drag:none;\" />\n",
+    "    <figcaption style=\"margin-top:6px; font-weight:600;\">3️⃣ <code>search_ticker</code> Tool Call & Output</figcaption>\n",
+    "  </figure>\n",
+    "\n",
+    "  <!-- Row 3: two side-by-side -->\n",
+    "  <figure style=\"margin:0;\">\n",
+    "    <img src=\"docs/9_next_tool_selection_llm.png\"\n",
+    "         alt=\"LLM Selecting Next Tool\"\n",
+    "         style=\"width:100%; border-radius:8px; display:block; pointer-events:none; -webkit-user-drag:none;\" />\n",
+    "    <figcaption style=\"margin-top:6px; font-weight:600;\">4️⃣ LLM Selecting Next Tool</figcaption>\n",
+    "  </figure>\n",
+    "\n",
+    "  <figure style=\"margin:0;\">\n",
+    "    <img src=\"docs/9_overview_tool_call.png\"\n",
+    "         alt=\"get_company_overview Tool Call & Output\"\n",
+    "         style=\"width:100%; border-radius:8px; display:block; pointer-events:none; -webkit-user-drag:none;\" />\n",
+    "    <figcaption style=\"margin-top:6px; font-weight:600;\">5️⃣ <code>get_company_overview</code> Tool Call & Output</figcaption>\n",
+    "  </figure>\n",
+    "\n",
+    "</div>\n"
+   ],
+   "id": "e2c7f5ae51e9771c"
   }
  ],
  "metadata": {
